// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThemeSignOffDetailCompleted > should match snapshot after loading 1`] = `
<div>
  <!---->
  <div
    class="flex gap-4"
  >
    <div
      class="flex items-center justify-center"
    >
      <div
        class="bg-pink-50 p-2 rounded-md"
      >
        <svg
          class="fill-pink-700"
          height="1.3rem"
          role="img"
          viewBox="0 -960 960 960"
          width="1.3rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <!---->
          <path
            d="M856-390 570-104q-12 12-27 18t-30 6q-15 0-30-6t-27-18L103-457q-11-11-17-25.5T80-513v-287q0-33 23.5-56.5T160-880h287q16 0 31 6.5t26 17.5l352 353q12 12 17.5 27t5.5 30q0 15-5.5 29.5T856-390ZM513-160l286-286-353-354H160v286l353 354ZM260-640q25 0 42.5-17.5T320-700q0-25-17.5-42.5T260-760q-25 0-42.5 17.5T200-700q0 25 17.5 42.5T260-640Zm220 160Z"
            xmlns="http://www.w3.org/2000/svg"
          />
          
          <!---->
        </svg>
        <!---->
      </div>
    </div>
    <!---->
     
    <div
      class="grow"
    >
      <!---->
      <h1
        class="text-neutral-700 text-xl"
        style=""
      >
        <!---->
        Theme Sign Off
        
        
      </h1>
      
      <!---->
       
      <p
        class="text-neutral-600 text-md"
      >
        Finalise themes to use for AI to map responses to
      </p>
      <!---->
    </div>
     
    <!---->
  </div>
  <!---->
   
  <section
    class="my-6"
  >
    <!---->
    <button
      aria-pressed="false"
      class="text-sm cursor-pointer rounded-md py-1 px-2 border border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
      data-variant="ghost"
      role="button"
      tabindex="0"
    >
      <!---->
      <!---->
      <div
        class="flex items-center gap-2 text-neutral-700"
      >
        <div
          class="rotate-180"
        >
          <svg
            class="fill-neutral-500"
            height="1rem"
            role="img"
            viewBox="0 -960 960 960"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"
              xmlns="http://www.w3.org/2000/svg"
            />
            <!---->
          </svg>
          <!---->
        </div>
         Back to questions
      </div>
      
      
      
    </button>
    
    <!---->
  </section>
  <!---->
   
  <section
    class="mb-8"
  >
    <div
      class="h-full my-4 p-4 rounded-2xl border border-gray-200"
      data-testid="panel-component"
    >
      <div
        class="flex gap-4"
      >
        <div
          class="mt-0.5"
        >
          <svg
            class="fill-secondary"
            height="1.2rem"
            role="img"
            viewBox="0 -960 960 960"
            width="1.2rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M478-240q21 0 35.5-14.5T528-290q0-21-14.5-35.5T478-340q-21 0-35.5 14.5T428-290q0 21 14.5 35.5T478-240Zm-36-154h74q0-33 7.5-52t42.5-52q26-26 41-49.5t15-56.5q0-56-41-86t-97-30q-57 0-92.5 30T342-618l66 26q5-18 22.5-39t53.5-21q32 0 48 17.5t16 38.5q0 20-12 37.5T506-526q-44 39-54 59t-10 73Zm38 314q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
            />
            <!---->
          </svg>
          <!---->
        </div>
         
        <div>
          <h2
            class="text-md"
          >
            <div
              class="blink select-none bg-neutral-100 text-neutral-100"
            >
              SKELETON
            </div>
            <!---->
          </h2>
           
          <div
            class="mb-4 mt-2"
          >
            <div
              class="flex justify-between items-center gap-2 rounded-md w-max py-0.5 px-2 text-xs bg-pink-100 text-primary border border-pink-300"
            >
              <!---->
              <svg
                class="fill-primary"
                height="1rem"
                role="img"
                viewBox="0 -960 960 960"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m424-296 282-282-56-56-226 226-114-114-56 56 170 170Zm56 216q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
                  xmlns="http://www.w3.org/2000/svg"
                />
                <!---->
              </svg>
              <!---->
               
              <span
                class="py-0.5"
              >
                Themes Signed Off
              </span>
              <!---->
            </div>
            <!---->
          </div>
           
          <p
            class="text-sm text-neutral-500"
          >
            This question has completed the theme sign-off process. The selected
            themes below have been approved for AI analysis and are ready to be
            used for mapping consultation responses.
          </p>
        </div>
         
        <div>
          <!---->
          <button
            aria-pressed="false"
            class="text-sm cursor-pointer rounded-md py-1 px-2 border border-gray-300 bg-white transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
            data-variant="default"
            role="button"
            tabindex="0"
            title="Click to contact Consult support"
          >
            <!---->
            <!---->
            <!---->
            <svg
              class="fill-primary"
              height="1.2rem"
              role="img"
              viewBox="0 -960 960 960"
              width="1.2rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M360-120H200q-33 0-56.5-23.5T120-200v-280q0-75 28.5-140.5t77-114q48.5-48.5 114-77T480-840q75 0 140.5 28.5t114 77q48.5 48.5 77 114T840-480v280q0 33-23.5 56.5T760-120H600v-320h160v-40q0-117-81.5-198.5T480-760q-117 0-198.5 81.5T200-480v40h160v320Zm-80-240h-80v160h80v-160Zm400 0v160h80v-160h-80Zm-400 0h-80 80Zm400 0h80-80Z"
                xmlns="http://www.w3.org/2000/svg"
              />
              <!---->
            </svg>
            <!---->
             
            <span
              class="text-primary"
            >
              consult@cabinetoffice.gov.uk
            </span>
            
            
            
          </button>
          
          <!---->
        </div>
      </div>
      <!---->
    </div>
    <!---->
  </section>
  <!---->
   
  <section>
    <div
      class="h-full my-4 p-4 rounded-2xl border border-gray-200"
      data-testid="panel-component"
    >
      <h2
        class="text-md"
      >
        Selected Themes
      </h2>
        
      <ul>
        <!---->
        <li>
          <div
            class="h-full my-4 p-4 rounded-2xl border border-gray-200 bg-neutral-50"
            data-testid="panel-component"
          >
            <div
              class="flex justify-between relative pl-4 text-sm before:absolute before:top-[45%] before:left-0 before:transform before:-translate-y-1/2 before:w-2 before:h-2 before:bg-primary before:rounded-full svelte-9k7fdd"
            >
              <h3>
                More innovative
              </h3>
               
              <div
                class="flex justify-between items-center gap-2 rounded-md w-max py-0.5 px-2 text-xs text-secondary bg-teal-50 border border-teal-400"
              >
                Signed Off
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </li>
        <li>
          <div
            class="h-full my-4 p-4 rounded-2xl border border-gray-200 bg-neutral-50"
            data-testid="panel-component"
          >
            <div
              class="flex justify-between relative pl-4 text-sm before:absolute before:top-[45%] before:left-0 before:transform before:-translate-y-1/2 before:w-2 before:h-2 before:bg-primary before:rounded-full svelte-9k7fdd"
            >
              <h3>
                Innovative packaging
              </h3>
               
              <div
                class="flex justify-between items-center gap-2 rounded-md w-max py-0.5 px-2 text-xs text-secondary bg-teal-50 border border-teal-400"
              >
                Signed Off
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </li>
        
        <!---->
      </ul>
      <!---->
    </div>
    <!---->
  </section>
  <!---->
   
  <section
    class="mt-8"
  >
    <div
      class="flex flex-wrap items-center justify-between gap-2"
    >
      <div
        class="flex flex-wrap items-center gap-2"
      >
        <!---->
        <button
          aria-pressed="false"
          class="text-sm cursor-pointer rounded-md py-1 px-2 border border-gray-300 bg-white transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
          data-variant="default"
          role="button"
          tabindex="0"
        >
          <!---->
          <!---->
          Select Another Question
          
          
          
        </button>
        
        <!---->
      </div>
    </div>
  </section>
  <!---->
  
</div>
`;

exports[`ThemeSignOffDetailCompleted > should match snapshot initially 1`] = `
<div>
  <!---->
  <div
    class="flex gap-4"
  >
    <div
      class="flex items-center justify-center"
    >
      <div
        class="bg-pink-50 p-2 rounded-md"
      >
        <svg
          class="fill-pink-700"
          height="1.3rem"
          role="img"
          viewBox="0 -960 960 960"
          width="1.3rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <!---->
          <path
            d="M856-390 570-104q-12 12-27 18t-30 6q-15 0-30-6t-27-18L103-457q-11-11-17-25.5T80-513v-287q0-33 23.5-56.5T160-880h287q16 0 31 6.5t26 17.5l352 353q12 12 17.5 27t5.5 30q0 15-5.5 29.5T856-390ZM513-160l286-286-353-354H160v286l353 354ZM260-640q25 0 42.5-17.5T320-700q0-25-17.5-42.5T260-760q-25 0-42.5 17.5T200-700q0 25 17.5 42.5T260-640Zm220 160Z"
            xmlns="http://www.w3.org/2000/svg"
          />
          
          <!---->
        </svg>
        <!---->
      </div>
    </div>
    <!---->
     
    <div
      class="grow"
    >
      <!---->
      <h1
        class="text-neutral-700 text-xl"
        style=""
      >
        <!---->
        Theme Sign Off
        
        
      </h1>
      
      <!---->
       
      <p
        class="text-neutral-600 text-md"
      >
        Finalise themes to use for AI to map responses to
      </p>
      <!---->
    </div>
     
    <!---->
  </div>
  <!---->
   
  <section
    class="my-6"
  >
    <!---->
    <button
      aria-pressed="false"
      class="text-sm cursor-pointer rounded-md py-1 px-2 border border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
      data-variant="ghost"
      role="button"
      tabindex="0"
    >
      <!---->
      <!---->
      <div
        class="flex items-center gap-2 text-neutral-700"
      >
        <div
          class="rotate-180"
        >
          <svg
            class="fill-neutral-500"
            height="1rem"
            role="img"
            viewBox="0 -960 960 960"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"
              xmlns="http://www.w3.org/2000/svg"
            />
            <!---->
          </svg>
          <!---->
        </div>
         Back to questions
      </div>
      
      
      
    </button>
    
    <!---->
  </section>
  <!---->
   
  <section
    class="mb-8"
  >
    <div
      class="h-full my-4 p-4 rounded-2xl border border-gray-200"
      data-testid="panel-component"
    >
      <div
        class="flex gap-4"
      >
        <div
          class="mt-0.5"
        >
          <svg
            class="fill-secondary"
            height="1.2rem"
            role="img"
            viewBox="0 -960 960 960"
            width="1.2rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M478-240q21 0 35.5-14.5T528-290q0-21-14.5-35.5T478-340q-21 0-35.5 14.5T428-290q0 21 14.5 35.5T478-240Zm-36-154h74q0-33 7.5-52t42.5-52q26-26 41-49.5t15-56.5q0-56-41-86t-97-30q-57 0-92.5 30T342-618l66 26q5-18 22.5-39t53.5-21q32 0 48 17.5t16 38.5q0 20-12 37.5T506-526q-44 39-54 59t-10 73Zm38 314q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
            />
            <!---->
          </svg>
          <!---->
        </div>
         
        <div>
          <h2
            class="text-md"
          >
            <div
              class="blink select-none bg-neutral-100 text-neutral-100"
            >
              SKELETON
            </div>
            <!---->
          </h2>
           
          <div
            class="mb-4 mt-2"
          >
            <div
              class="flex justify-between items-center gap-2 rounded-md w-max py-0.5 px-2 text-xs bg-pink-100 text-primary border border-pink-300"
            >
              <!---->
              <svg
                class="fill-primary"
                height="1rem"
                role="img"
                viewBox="0 -960 960 960"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m424-296 282-282-56-56-226 226-114-114-56 56 170 170Zm56 216q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
                  xmlns="http://www.w3.org/2000/svg"
                />
                <!---->
              </svg>
              <!---->
               
              <span
                class="py-0.5"
              >
                Themes Signed Off
              </span>
              <!---->
            </div>
            <!---->
          </div>
           
          <p
            class="text-sm text-neutral-500"
          >
            This question has completed the theme sign-off process. The selected
            themes below have been approved for AI analysis and are ready to be
            used for mapping consultation responses.
          </p>
        </div>
         
        <div>
          <!---->
          <button
            aria-pressed="false"
            class="text-sm cursor-pointer rounded-md py-1 px-2 border border-gray-300 bg-white transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
            data-variant="default"
            role="button"
            tabindex="0"
            title="Click to contact Consult support"
          >
            <!---->
            <!---->
            <!---->
            <svg
              class="fill-primary"
              height="1.2rem"
              role="img"
              viewBox="0 -960 960 960"
              width="1.2rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M360-120H200q-33 0-56.5-23.5T120-200v-280q0-75 28.5-140.5t77-114q48.5-48.5 114-77T480-840q75 0 140.5 28.5t114 77q48.5 48.5 77 114T840-480v280q0 33-23.5 56.5T760-120H600v-320h160v-40q0-117-81.5-198.5T480-760q-117 0-198.5 81.5T200-480v40h160v320Zm-80-240h-80v160h80v-160Zm400 0v160h80v-160h-80Zm-400 0h-80 80Zm400 0h80-80Z"
                xmlns="http://www.w3.org/2000/svg"
              />
              <!---->
            </svg>
            <!---->
             
            <span
              class="text-primary"
            >
              consult@cabinetoffice.gov.uk
            </span>
            
            
            
          </button>
          
          <!---->
        </div>
      </div>
      <!---->
    </div>
    <!---->
  </section>
  <!---->
   
  <section>
    <div
      class="h-full my-4 p-4 rounded-2xl border border-gray-200"
      data-testid="panel-component"
    >
      <h2
        class="text-md"
      >
        Selected Themes
      </h2>
        
      <ul>
        <!---->
        <li>
          <div
            class="h-full my-4 p-4 rounded-2xl border border-gray-200 bg-neutral-50"
            data-testid="panel-component"
          >
            <div
              class="flex justify-between relative pl-4 text-sm svelte-9k7fdd"
            >
              <p
                class="blink w-full select-none bg-neutral-200 text-xs text-neutral-100"
              >
                SKELETON
              </p>
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </li>
        <li>
          <div
            class="h-full my-4 p-4 rounded-2xl border border-gray-200 bg-neutral-50"
            data-testid="panel-component"
          >
            <div
              class="flex justify-between relative pl-4 text-sm svelte-9k7fdd"
            >
              <p
                class="blink w-full select-none bg-neutral-200 text-xs text-neutral-100"
              >
                SKELETON
              </p>
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </li>
        
        <!---->
      </ul>
      <!---->
    </div>
    <!---->
  </section>
  <!---->
   
  <section
    class="mt-8"
  >
    <div
      class="flex flex-wrap items-center justify-between gap-2"
    >
      <div
        class="flex flex-wrap items-center gap-2"
      >
        <!---->
        <button
          aria-pressed="false"
          class="text-sm cursor-pointer rounded-md py-1 px-2 border border-gray-300 bg-white transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
          data-variant="default"
          role="button"
          tabindex="0"
        >
          <!---->
          <!---->
          Select Another Question
          
          
          
        </button>
        
        <!---->
      </div>
    </div>
  </section>
  <!---->
  
</div>
`;
